# niri-workspace-applet

./: Cargo.toml  README.md  justfile
res/: com.github.blindinlights.NiriWorkSpaceApplet.desktop  com.github.blindinlights.NiriWorkSpaceApplet.metainfo.xml
src/: app.rs  main.rs  niri.rs
